feat: batch get users
